se agrega index, update, delete, rutas y documentacion
