# app/Http/Controllers/AuthController.php
@@ -6,11 +6,74 @@ use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Exception;
+use Illuminate\Database\Eloquent\ModelNotFoundException;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Validator;
 use Tymon\JWTAuth\Exceptions\JWTException;
 use Tymon\JWTAuth\Facades\JWTAuth;
 
 class AuthController extends Controller
 {
+    /**
+     * @OA\Get(
+     *     path="/api/users",
+     *     summary="Listar todos los usuarios",
+     *     description="Devuelve una lista de todos los usuarios registrados en el sistema.",
+     *     operationId="index",
+     *     tags={"Users"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Usuarios obtenidos exitosamente",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=200),
+     *             @OA\Property(property="msg", type="string", example="Usuarios obtenidos existosamente"),
+     *             @OA\Property(
+     *                 property="users",
+     *                 type="array",
+     *                 @OA\Items(
+     *                     type="object",
+     *                     @OA\Property(property="id", type="integer", example=2),
+     *                     @OA\Property(property="name", type="string", example="David Prueba"),
+     *                     @OA\Property(property="role", type="string", example="user"),
+     *                     @OA\Property(property="email", type="string", format="email", example="davidprueba1@gmail.com"),
+     *                     @OA\Property(property="email_verified_at", type="string", nullable=true, example=null),
+     *                     @OA\Property(property="created_at", type="string", format="date-time", example="2025-07-02T16:33:42.000000Z"),
+     *                     @OA\Property(property="updated_at", type="string", format="date-time", example="2025-07-02T16:33:42.000000Z")
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Error interno del servidor",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=500),
+     *             @OA\Property(property="msg", type="string", example="Error interno del servidor"),
+     *             @OA\Property(property="error", type="string", example="Mensaje del error")
+     *         )
+     *     )
+     * )
+     */
+
+    public function index()
+    {
+        try {
+            $users = User::all();
+
+            return response()->json([
+                'status' => 200,
+                'msg' => 'Usuarios obtenidos existosamente',
+                'users' => $users
+            ], 200);
+        } catch (Exception $e) {
+            return response()->json([
+                'status' => 500,
+                'msg' => 'Error interno del servidor',
+                'error' => $e->getMessage(),
+            ], 500);
+        }
+    }
+
     /**
      * @OA\Post(
      *     path="/api/register",
@@ -48,7 +111,7 @@ class AuthController extends Controller
      *     )
      * )
      */
-    
+
     public function register(Request $request)
     {
         try {
@@ -239,4 +302,206 @@ class AuthController extends Controller
             'msg' => 'Se cerró sesión exitosamente'
         ], 200);
     }
+
+    /**
+     * @OA\Put(
+     *     path="/api/users/{id}",
+     *     summary="Actualizar un usuario",
+     *     description="Actualiza la información de un usuario. Solo se modifican los campos enviados. Se debe enviar el ID del usuario en la URL.",
+     *     operationId="updateUser",
+     *     tags={"Users"},
+     *     
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID del usuario a actualizar",
+     *         @OA\Schema(type="integer", example=1)
+     *     ),
+     * 
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Datos a actualizar del usuario",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="name", type="string", example="David Cartagena"),
+     *             @OA\Property(property="role", type="string", example="admin"),
+     *             @OA\Property(property="email", type="string", format="email", example="davidprueba@gmail.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="prueba123."),
+     *             @OA\Property(property="password_confirmation", type="string", format="password", example="prueba123.")
+     *         )
+     *     ),
+     * 
+     *     @OA\Response(
+     *         response=200,
+     *         description="Usuario actualizado correctamente",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=200),
+     *             @OA\Property(property="msg", type="string", example="Usuario actualizado correctamente"),
+     *             @OA\Property(
+     *                 property="user",
+     *                 type="object",
+     *                 description="Información del usuario actualizado",
+     *                 @OA\Property(property="id", type="integer", example=1),
+     *                 @OA\Property(property="name", type="string", example="David Cartagena"),
+     *                 @OA\Property(property="email", type="string", example="davidprueba@gmail.com"),
+     *                 @OA\Property(property="role", type="string", example="admin"),
+     *                 @OA\Property(property="updated_at", type="string", example="2025-07-06T15:30:00Z"),
+     *                 @OA\Property(property="created_at", type="string", example="2024-01-01T10:00:00Z")
+     *             )
+     *         )
+     *     ),
+     * 
+     *     @OA\Response(
+     *         response=422,
+     *         description="Errores de validación",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=422),
+     *             @OA\Property(property="msg", type="string", example="Errores de validación"),
+     *             @OA\Property(property="errors", type="object")
+     *         )
+     *     ),
+     * 
+     *     @OA\Response(
+     *         response=500,
+     *         description="Error interno al actualizar el usuario",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=500),
+     *             @OA\Property(property="msg", type="string", example="Error al actualizar el usuario"),
+     *             @OA\Property(property="error", type="string", example="Mensaje del error")
+     *         )
+     *     )
+     * )
+     */
+
+    public function updateUser(Request $request, $id)
+    {
+        try {
+
+            $user = User::findOrFail($id);
+            $rules = [];
+
+            if ($request->has('name')) {
+                $rules['name'] = 'string|max:255';
+            }
+            if ($request->has('email')) {
+                $rules['email'] = 'email|unique:users,email,' . $id;
+            }
+            if ($request->has('role')) {
+                $rules['role'] = 'string';
+            }
+            if ($request->has('password')) {
+                $rules['password'] = 'string|min:6|confirmed';
+            }
+
+            $validator = Validator::make($request->all(), $rules);
+
+            if ($validator->fails()) {
+                return response()->json([
+                    'status' => 422,
+                    'msg' => 'Errores de validación',
+                    'errors' => $validator->errors(),
+                ], 422);
+            }
+
+            $data = $request->only(['name', 'email', 'role']);
+            $user->update($data);
+
+            if ($request->filled('password')) {
+                $user->password = Hash::make($request->password);
+                $user->save();
+            }
+
+            return response()->json([
+                'status' => 200,
+                'msg' => 'Usuario actualizado correctamente',
+                'user' => $user
+            ], 200);
+        } catch (\Exception $e) {
+            return response()->json([
+                'status' => 500,
+                'msg' => 'Error al actualizar el usuario',
+                'error' => $e->getMessage()
+            ], 500);
+        }
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/users/{id}",
+     *     summary="Eliminar un usuario",
+     *     description="Elimina un usuario existente por su ID.",
+     *     operationId="destroy",
+     *     tags={"Users"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID del usuario a eliminar",
+     *         @OA\Schema(type="integer", example=2)
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Usuario eliminado correctamente",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=200),
+     *             @OA\Property(property="msg", type="string", example="Se eliminó correctamente el usuario"),
+     *             @OA\Property(
+     *                 property="user",
+     *                 type="object",
+     *                 @OA\Property(property="id", type="integer", example=2),
+     *                 @OA\Property(property="name", type="string", example="David Prueba"),
+     *                 @OA\Property(property="email", type="string", format="email", example="davidprueba1@gmail.com"),
+     *                 @OA\Property(property="role", type="string", example="user"),
+     *                 @OA\Property(property="created_at", type="string", format="date-time", example="2025-07-02T16:33:42.000000Z"),
+     *                 @OA\Property(property="updated_at", type="string", format="date-time", example="2025-07-02T16:33:42.000000Z")
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Usuario no encontrado",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=404),
+     *             @OA\Property(property="msg", type="string", example="usuario no encontrado"),
+     *             @OA\Property(property="error", type="string", example="No query results for model [App\\Models\\User] 999")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Error interno al eliminar el usuario",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=500),
+     *             @OA\Property(property="msg", type="string", example="Error interno al eliminar el usuario"),
+     *             @OA\Property(property="error", type="string", example="Mensaje del error")
+     *         )
+     *     )
+     * )
+     */
+
+    public function destroy($id)
+    {
+        try {
+            $user = User::findOrFail($id);
+            $user->delete();
+
+            return response()->json([
+                'status' => 200,
+                'msg' => 'Se eliminó correctamente el usuario',
+                'user' => $user
+            ], 200);
+        } catch (ModelNotFoundException $e) {
+            return response()->json([
+                'status' => 404,
+                'msg' => 'usuario no encontrado',
+                'error' => $e->getMessage(),
+            ], 404);
+        } catch (Exception $e) {
+            return response()->json([
+                'status' => 500,
+                'msg' => 'Error interno al eliminar el usuario',
+                'error' => $e->getMessage(),
+            ], 500);
+        }
+    }
+
 }
